k8s-specifications/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db-deployment
    labels:
      app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mongo:latest
          ports:
            - containerPort: 27017
              name: mongodb
