k8s-specifications/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-deployment
    labels:
      app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: localhost:5000/scproj/frontend:latest
          ports:
            - containerPort: 1337
              name: frontend
