k8s-specifications/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  type: ClusterIP
  ports:
    - name: "db-service"
      port: 27017
      targetPort: 27017
  selector:
      app: db
