k8s-specifications/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
    - name: "frontend"
      port: 1338
      targetPort: 1338
      nodePort: 30008 # expose this port to outside world. just for testing now as in the real app only web frontend should be open, right?
  selector:
      app: frontend
