k8s-specifications/rest-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api
  labels:
    app: rest-api
spec:
  type: NodePort
  ports:
    - name: "rest-api"
      port: 1337
      targetPort: 1337
      #nodeport: 30007
  selector:
      app: rest-api
