k8s-specifications/db-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: db-network-policies
spec:
 podSelector:
  matchLabels:
   app: db
 policyTypes:
  - Ingress
  - Egress
 ingress:
  - from:
    - podSelector:
       matchLabels:
        app: rest-api
 egress: []
