k8s-specifications/rest-api-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: rest-api-network-policies
spec:
 podSelector:
  matchLabels:
   app: rest-api
 policyTypes:
  - Ingress
  - Egress
 ingress:
  - from:
    - podSelector:
       matchLabels:
        app: web-frontend
 egress:
  - to:
    podSelector:
      matchLabels:
        app: db
